--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/fundo"
+    android:background="@color/black"
     tools:context=".MenuActivity">
 
 
@@ -252,8 +252,8 @@
                     android:shadowRadius="5"
                     android:text="Parceiros"
                     android:textAllCaps="true"
-                    android:textColor="#503102"
-                    android:textSize="25sp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
