--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/idMenuPets"
+            android:id="@+id/idcoleta"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_margin="5dp"
@@ -55,7 +55,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/idMenuAlimentos"
+            android:id="@+id/idDistribuidora"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_margin="5dp"
@@ -100,7 +100,7 @@
         android:layout_gravity="center">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/idMenuDoacoes"
+            android:id="@+id/idLocalizacao"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_margin="5dp"
@@ -138,7 +138,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/idMenuServicos"
+            android:id="@+id/idMateriais"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_margin="5dp"
@@ -184,7 +184,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/idMenuLocalizar"
+            android:id="@+id/idEmpresa"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_margin="5dp"
@@ -222,7 +222,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/idMenuParceiros"
+            android:id="@+id/idParceiros"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_margin="5dp"
